--- a/css/indexCSS/Nav & Hero.css
+++ b/css/indexCSS/Nav & Hero.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -6,6 +7,8 @@
     font-family: 'Inter', sans-serif;
     color: #333333;
     scroll-behavior: smooth;
+    list-style: none;
+    text-decoration: none;
 }
 body {
     overflow-x: hidden;
@@ -27,6 +30,10 @@ header{
     background-color: #C1FFF2;
     width: 100%;
     z-index: 10000;
+    transition: .3s all;
+}
+.nav-bg {
+    background-color: #026E64 !important;
 }
 .main-nav > .wrapper{
     padding: .5em 0;
@@ -35,21 +42,61 @@ header{
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.main-nav img {
-    width: 15em;
-    height: 5em;
+.logo a {
+    display: flex;
+    align-items: center;
+    gap: 2em;
 }
+.logo .logotext{
+    font-family: 'Koulen', cursive;
+    font-weight: 700;
+    font-size: 2em;
+    letter-spacing: 0.055em;
+}
+.logotext span {
+    font-family: 'Koulen', cursive;
+    color: #6500CA;
+    transition: .3s all;;
+}
+.logotext-scroll {
+    color: #ffffff !important;
+    transition: .3s all;
+}
+.main-nav-scroll-text {
+    color: #6DF8A6 !important;
+    transition: .3s all;
+}
+.main-nav-scroll {
+    background-color: #026E64;
+}
+
+.layer {
+    fill: #026E64;
+    transition: .3s all;
+}
+.layer2 {
+    fill: #C1FFF2;
+    transition: .3s all;
+}
+.diff {
+    fill: #026E64 !important;
+    transition: .3s all;
+}
+
 .navMenu{
     display: flex;
     gap:  30px;
 }
 .navList{
     list-style: none;
-    font-size: 1.2em;
+    font-size: 1em;
 }
 .navLink{
     text-decoration: none;
-    color: black;
+    /* color: #333333; */
+}
+.asd {
+    color: #ffffff !important;
 }
 
 
@@ -69,15 +116,18 @@ header{
 }
 .burger-toggel{
     transform: translateX(0) !important; 
+    transition: .3s all;
+    opacity: 0;
 }
 
 .navMenu{
     transform: translateX(100%); 
     position: absolute;
-    top: 0;
+    opacity: 1;
+    top: -40px;
     right: 0;
     gap: 5px;
-    padding: 58px 0 20px;
+    padding: 98px 0 20px;
     width: 70%;
     height: 100vh;
     text-align: center;
@@ -85,7 +135,7 @@ header{
     margin-top: 2em;
     text-align: start;
     flex-direction: column;
-    background-color: #026E64;
+    background-color: #026e63;
     z-index: -1;
     transition: .3s ease-in-out;
 }
@@ -102,7 +152,7 @@ header{
     
 }
 .navMenu li:hover a  {
-    color: #6500CA;
+    color: #6500CA !important;
 }
 
 .hamburger{
@@ -263,6 +313,7 @@ header{
     }
     .wrapper {
         width: 90%;
+        max-width: 1520px;
     }
     .navMenu {
         margin: 0;
@@ -290,7 +341,7 @@ header{
         border: none;
     }
     .navMenu li a {
-        color: #ffffff !important;
+        font-size: 1em !important;
     }
 }
 @media only screen and (max-width: 800px){
