--- a/css/indexCSS/Our Pricing.css
+++ b/css/indexCSS/Our Pricing.css
@@ -294,13 +294,15 @@ footer {
     list-style-image: url("/assets/ic_outline-email.svg");
 }
 
-.link-nav a {
-    color: #FFFFFF;
+.link-nav a  {
+    color: #FFFFFF !important;
     text-decoration: none;
     line-height: 163.52%;
     font-weight: 300;
 }
-
+.link-nav a i {
+    color: #FFFFFF !important;
+}
 footer h3 {
     margin-bottom: 1.5em;
     font-size: 1.5em;
@@ -424,7 +426,7 @@ footer h3 {
 }
 
 .socail {
-
+    color: #C1FFF2 !important;
     flex-direction: row;
     /* justify-content: center; */
 }
