--- a/aboutus/about.css
+++ b/aboutus/about.css
@@ -129,6 +129,7 @@ h1 {
 }
 .about-banner img {
     width: 100%;
+    height: 50%;
     object-fit: cover;
     position: relative;
     z-index: -1;
