--- a/css/indexCSS/Testimonial.css
+++ b/css/indexCSS/Testimonial.css
@@ -35,7 +35,7 @@ body {
 } */
 
 .testim {
-    background-color: #C1FFF2;
+    background-color: #BDF7FF;
     padding: 3em 0;
 	width: 100%;
     
@@ -149,7 +149,7 @@ body {
     margin-bottom: 2em;
 }
 .testim-head label {
-    color: #6500CA;
+    color: #FC7900;
     font-weight: 700;
 }
 .testim-head h2 {
