--- a/css/indexCSS/BLOG POST & EVENTS.css
+++ b/css/indexCSS/BLOG POST & EVENTS.css
@@ -20,7 +20,7 @@
 }
 .blog-head label {
     font-weight: 700;
-    color: #6500CA;
+    color: #FC7900;
     font-size: .9em;
 }
 .blog-head h2 {
@@ -48,7 +48,7 @@
     height: 100%;
     display: block;
     z-index: -1;
-    background: linear-gradient(180deg, rgba(193, 255, 242, 0) 41.5%, rgba(2, 110, 100, 0.71) 64.18%, rgba(2, 110, 100, 0.92) 85.57%);
+    background: linear-gradient(180deg, rgba(193, 255, 242, 0) 0%, rgba(40, 66, 101, 0.49) 64.18%, #284265 92.19%);
 }
 .imge-bg-blog {
     position: absolute;
