--- a/css/indexCSS/Our Pricing.css
+++ b/css/indexCSS/Our Pricing.css
@@ -46,11 +46,11 @@
 }
 
 .box-center {
-    border: 3px solid #6500CA;
+    border: 3px solid #284265;
 }
 
 .package-box {
-    background-color: #C1FFF2;
+    background-color: #BDF7FF;
     /* width: 25em; */
     width: 100%;
     height: 43em;
@@ -81,12 +81,12 @@
 .package-box p {
     font-weight: 700;
     font-size: 1.2em;
-    color: #6500CA;
+    color: #FC7900;
     line-height: 178.52%;
 }
 
 .prize-container ul {
-    list-style: url("/assets/circle-check-regular.svg") !important;
+    list-style: url("/assets/material-symbols_check-circle-outline-rounded.svg") !important;
     font-size: 1.2em;
     line-height: 140.02%;
     display: flex;
@@ -101,7 +101,7 @@
 }
 
 .btn button {
-    background-color: #6500CA;
+    background-color: #FC7900;
     border: none;
     color: #FFFFFF;
     font-weight: 700;
@@ -109,13 +109,12 @@
     height: 3em;
     font-size: 1.2em;
     padding: .4em 0;
-    box-shadow: 2px 6px 8px rgba(101, 0, 202, 0.47);
     border-radius: 14px;
-}
+} 
 .basic {
     background-color: transparent !important;
-    border: 3px solid #6500CA !important;
-    color: #6500CA !important;
+    border: 3px solid #FC7900 !important;
+    color: #FC7900 !important;
 
 }
 
@@ -167,7 +166,7 @@ h2 {
 }
 
 .tag-name {
-    color: #6500CA;
+    color: #FC7900;
     font-weight: 700;
     text-transform: uppercase;
     font-size: .7em;
@@ -269,7 +268,7 @@ h4 {
 
 /* footer */
 footer {
-    background-color: #026E64;
+    background-color: #284265;
     padding: 5em 0;
     overflow: hidden;
 }
@@ -283,7 +282,7 @@ footer {
 }
 
 .questions-nav li:nth-child(1) {
-    list-style-image: url("/assets/Vector.svg");
+    list-style-image: url("/assets/material-symbols_location-on.svg");
 }
 
 .questions-nav li:nth-child(2) {
@@ -401,8 +400,8 @@ footer h3 {
     font-weight: 700;
     border: none;
     color: #FFFFFF;
-    background: #6500CA;
-    box-shadow: 0px 8px 9px rgba(39, 0, 79, 0.84);
+    background: #FC7900;
+    box-shadow: 0px 3px 10px rgba(252, 121, 0, 0.31);
 }
 
 .social-email {
@@ -435,7 +434,7 @@ footer h3 {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #17B3BD;
+    background-color: #515151;
     height: 3em;
     width: 3em;
     border-radius: 50%;
