--- a/css/indexCSS/what We Offer & Student Enrolled.css
+++ b/css/indexCSS/what We Offer & Student Enrolled.css
@@ -15,7 +15,7 @@
     margin-bottom: 2em;
 }
 .headtop label {
-    color: #6500CA;
+    color: #FC7900;
     font-weight: 700;
     font-size: .8em;
 }
@@ -29,13 +29,13 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     width: 18em;
     padding: 1em;
-    border: 3px solid #026E64;
+    border: 3px solid #284265;
     border-radius: 8px;
     min-width: 15em;
 }
 .imge-box {
     width: 100%;
-    border: 2px solid #026E64;
+    border: 2px solid #284265;
     margin-bottom: 1em;
     height: 10em;
 
@@ -51,7 +51,7 @@
 .description h3 {
     font-size: 1.7em;
     margin-bottom: .6em;
-    color: #026E64;
+    color: #284265;
 }
 .description p{
     color: #6e6e6e;
@@ -65,17 +65,17 @@
     width: 80%;
     font-size: 1.2em;
     padding: .4em 0;
-    border: 2px solid #6500CA;
+    border: 2px solid #FC7900;
     background-color: transparent;
     border-radius: 8px;
     /* border: none; */
-    color: #6500CA;
+    color: #FC7900;
     font-weight: 700;
     transition: .3s ease-in-out;
     /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
 }
 .btn-course button:hover {
-    background-color: #6500CA;
+    background-color: #FC7900;
     color: #ffffff;
     transition: .3s all;
 }
@@ -91,13 +91,11 @@
 }
 .order {
     order: -1;
-    border: 3px solid #6500CA !important; 
+
 }
-.order .imge-box{
-    border: 2px solid #6500CA;
-}
+
 .order button {
-    background-color: #6500CA;
+    background-color: #FC7900;
     color: #ffffff;
 }
 @media only screen and (min-width: 838px) {
@@ -113,7 +111,6 @@
     }
     .order {
         order: 4;
-        border: 2px solid #6500CA;
     }
 }
 @media only screen and (min-width: 1400px) {
@@ -130,7 +127,7 @@
 }
 .buttom button {
     width: 10em !important;
-    background-color: #6500CA;
+    background-color: #FC7900;
     color: #ffffff;
     box-shadow: 2px 6px 8px -2px rgba(101, 0, 202, 0.47);
 }
