--- a/css/indexCSS/what We Offer & Student Enrolled.css
+++ b/css/indexCSS/what We Offer & Student Enrolled.css
@@ -25,7 +25,7 @@
     font-size: 2em;
 }
 .box {
-    background-color: #C1FFF2;
+    background-color: #bdf7ff;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     width: 18em;
     padding: 1em;
