--- a/dashboard/style.css/dashboard.css
+++ b/dashboard/style.css/dashboard.css
@@ -14,16 +14,19 @@
     width: 100%;
     height: 30em;
 }
-
-.video-course {
+body {
     background-color: #E3FFF9;
+}
+.video-course {
+    width: 100%;
+    
     padding: 1em;
-    border: 3px solid #026E64;
+    border: 3px solid #284265;
 }
 .description {
     padding: 1em;
     margin-top: 2em;
-    background: rgba(127, 229, 218, 0.44);
+    background: #BDF7FF;
 }
 .description h3 {
     font-size: 1.2em;
@@ -36,8 +39,7 @@
 
 .lesson {
     height: 100%;
-    background-color: #E3FFF9;
-    border: 3px solid #026E64;
+    border: 3px solid #284265;
 }
 .aside-head {
     display: flex;
@@ -45,7 +47,7 @@
     justify-content: center;
     align-items: center;
     height: 8em;
-    border-bottom: 10px solid #026E64;
+    border-bottom: 10px solid #284265;
 }
 .text-course {
     width: 80%;
@@ -55,7 +57,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: rgba(0, 196, 177, 0.13);
+    background: #BDF7FF;
+    transition: .3s ease-in-out;
 }
 .play {
     width: 20%;
@@ -69,6 +72,7 @@
     line-height: 175.02%;
 }
 .main-lesson h4 {
+    color: #FC7900;
     margin-bottom: 1em;
     font-size: 1.2em;
 }
@@ -78,8 +82,25 @@
     margin: 1em 0;
 }
 .cardActive {
-    background: rgba(0, 196, 177, 0.44);
+    background: #284265;
 }
+.activeP {
+    color: #ffffff;
+}
+
+.card-course:hover {
+    background: #284265;
+    transition: .3s all;
+}
+.card-course:hover p {
+    color: #ffffff;
+    transition: .3s all;
+}
+.card-course:hover i {
+    color: #ffffff;
+    transition: .3s all;
+}
+
 .main-container {
     height: 100%;
     display: flex;
@@ -88,6 +109,9 @@
 }
 .main-course {
     margin-top: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .main-lesson {
     cursor: pointer;
@@ -101,9 +125,14 @@
     }
     .video-course{
         height: 100%;
-        width: 55em;
     }
     aside {
-        width: 40em;
+        width: 30%;
     } 
+    .main-container section {
+        width: 80%;
+    }
+    .vid-box iframe {
+        height: 40em;
+    }
 }
