contact styling (to be reviewed and edited)

--- a/css/contactCSS/messageUs.css
+++ b/css/contactCSS/messageUs.css
@@ -17,8 +17,6 @@ html {
   );
   font-size: 1.6rem;
   margin: 0 auto;
-  background-size: cover;
-  background-position: center;
   padding-top: 8.5rem;
 }
 #contactHeader {
@@ -33,8 +31,9 @@ html {
       rgba(138, 248, 255, 0.71)
     ),
     url("/img/contactHeader.jpg");
-  background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   padding: 2rem;
 }
 #contactHeader strong {
@@ -195,6 +194,50 @@ html {
   font-size: 1.6rem;
   border: none;
   cursor: pointer;
+}
+.map-container {
+  margin: 0 auto;
+  background: #0f7d7d;
+}
+#map {
+  margin: auto;
+  display: flex;
+  padding: 0;
+  gap: 3rem;
+}
+#map iframe {
+  width: 100%;
+  height: 30rem;
+}
+.choiceDifference-container {
+  background-image: linear-gradient(
+    rgba(40, 66, 101, 0.54),
+    rgba(40, 66, 101, 0.54)
+  );
+  font-size: 1.6rem;
+  margin: 0 auto;
+}
+#choiceDifference {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 27rem;
+  background-image: linear-gradient(
+      rgba(40, 66, 101, 0.54),
+      rgba(40, 66, 101, 0.54)
+    ),
+    url("/img/contactFooter.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 2rem;
+}
+#choiceDifference p {
+  color: #fc7900;
+  font-weight: 700;
+  font-size: 3rem;
+  line-height: 3.6rem;
+  text-align: center;
 }
 @media (min-width: 1500px) {
   #messageUs {
@@ -359,7 +402,7 @@ html {
 @media (max-width: 534px) {
   #getInTouch {
     padding: 5rem 0 3rem;
-}
+  }
   #getInTouch h2 {
     margin-bottom: 5rem;
   }
@@ -416,6 +459,63 @@ html {
     margin-top: 1rem;
     border-radius: 7px;
   }
+
+  #choiceDifference {
+    height: 30rem;
+    background-image: linear-gradient(
+        rgba(40, 66, 101, 0.54),
+        rgba(40, 66, 101, 0.54)
+      ),
+      url("/img/contactFooterSM.jpg");
+    padding: 2rem;
+  }
+}
+
+@media (max-width: 390px) {
+  #contactHeader {
+    height: 40rem;
+    background-image: linear-gradient(
+        rgba(138, 248, 255, 0.71),
+        rgba(138, 248, 255, 0.71)
+      ),
+      url("/img/contactHeaderSM.jpg");
+    gap: 5rem;
+    justify-content: flex-end;
+  }
+  #contactHeader strong {
+    transform: translateY(15rem);
+    font-size: 3rem;
+  }
+  #contactHeader p {
+    text-align: justify;
+    margin-bottom: 5rem;
+    transform: translateY(25rem);
+  }
+  #getInTouch {
+    padding: 23rem 0 3rem;
+  }
+  #choiceDifference {
+    height: 25rem;
+}
+  #choiceDifference p {
+    font-size: 2.5rem;
+    line-height: 3rem;
+  }
+}
+@media (max-width: 344px) {
+  #contactHeader strong {
+    transform: translateY(20rem);
+  }
+  #contactHeader p {
+    transform: translateY(28rem);
+  }
+  #getInTouch {
+    padding: 27rem 0 3rem;
+  }
+  #choiceDifference p {
+    font-size: 2.3rem;
+    line-height: 2.8rem;
+  }
 }
 @media (max-width: 330px) {
   #messageUsText p {
@@ -423,259 +523,35 @@ html {
   }
 }
 
-/*
-.wrapper{
-    width: 80%;
-    margin: auto;
+@media (max-width: 320px) {
+  #contactHeader strong {
+    transform: translateY(23rem);
+    text-align: start;
+    font-size: 2.3rem;
+  }
+  #contactHeader p {
+    transform: translateY(30rem);
+  }
+  #getInTouch {
+    padding: 30rem 0 3rem;
+  }
 }
-header{
-    background-color: #C1FFF2;
-    height: 980px;
+@media (max-width: 295px) {
+  #contactHeader strong {
+    transform: translateY(25rem);
+  }
+  #contactHeader p {
+    transform: translateY(32rem);
+  }
 }
-nav{
-    position: fixed;
-    background-color: #026E64;
-    width: 100%;
-    z-index: 10000;
+@media (max-width: 274px) {
+  #contactHeader strong {
+    transform: translateY(28rem);
+  }
+  #contactHeader p {
+    transform: translateY(34rem);
+  }
+  #getInTouch {
+    padding: 32rem 0 3rem;
+  }
 }
-nav > .wrapper{
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.navMenu{
-    display: flex;
-    gap:  30px;
-}
-.navList{
-    list-style: none;
-}
-.navLink{
-    text-decoration: none;
-    color: black;
-}
-.hamburger{
-    display: none;
-}
-.bar{
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: black;
-}
-.logo{
-    z-index: 1000;
-}
-
-.landingPage{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    max-width: 1224px;
-    margin: auto;
-    padding-top: 70px;
-}
-.bannerText{
-    z-index: 10;
-    padding-top: 180px;
-    width: 400px;
-}
-.bannerText > h1{
-    padding-bottom: 20px;
-}
-#text{
-    color: #026E64;
-}
-.btnSeeCourses{
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 15px;
-    background-color: #6500CA;
-    color: white;
-    border-radius: 30px;
-    border: none;
-}
-.btnSeeCourses:hover{
-    cursor: pointer;
-}
-.heroBanner{
-    grid-column-start: 3;
-}
-
-
-.info{
-    background-color: #8FF8B6;
-    background-image: linear-gradient(to right, #8FF8B6, #6DF8A6);
-}
-.info > .wrapper{
-    display: grid;
-    grid-template-areas: 
-    'students graduates approval awards'
-    ;
-}
-.info > .wrapper div{
-    padding: 2em 0;
-}
-.students{
-    grid-area: students;
-}
-.graduates{
-    grid-area: graduates;
-}
-.approval{
-    grid-area: approval;
-}
-.awards{
-    grid-area: awards;
-}
-
-.vectors{
-    z-index: 1;
-}
-.vectors > img{
-    position: absolute;
-    opacity: 0.8;
-}
-#vec{
-    top: 59px;
-    right: 0;
-}
-#vec1{
-    top: 706px;
-    right: 0;
-}
-#vec2{
-    top: 347px;
-}
-@media only screen and (max-width: 1300px){
-    .heroBanner{
-        position: absolute;
-        right: 50px;
-    }
-    .heroBanner > img{
-        height: 100%;
-        width: 100%;
-    }
-}
-@media only screen and (max-width: 900px){
-    header{
-        height: 750px;
-    }
-    nav{
-        justify-content: space-between;
-    }
-
-    .wrapper{
-        width: 90%;
-    }
-    .bannerText{
-        padding-top: 50px;
-        width: 200px;
-    }
-    .heroBanner > img{
-        height: 601.67px;
-        width: 600px;
-    }
-
-    #vec, #vec1{
-        width: 11%;
-    }
-    #vec1{
-        top: 500px;
-    }
-    #vec2{
-        width: 24%;
-    }
-}
-@media only screen and (max-width: 800px){
-    header{
-        height: 700px;
-    }
-    .heroBanner > img{
-        height: 401.67px;
-        width: 400px;
-    }
-}
-@media only screen and (max-width: 700px){
-    header{
-        height: 650px;
-    }
-    .hamburger{
-        display: block;
-        position: absolute;
-        z-index: 100;
-    }
-    .hamburger.active .bar:nth-child(2){
-        opacity: 0;
-    }
-    .hamburger.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45045deg);
-    }
-    .hamburger.active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45045deg);
-    }
-    .navMenu{
-        position: absolute;
-        right: -1000px;
-        top: 0;
-        gap: 5px;
-        padding: 58px 0 20px;
-        width: 40%;
-        height: 100vh;
-        text-align: center;
-        transition: 0.3s;
-        flex-direction: column;
-        background-color: #026E64;
-        z-index: 100;
-    }
-    .navMenu.active{
-        right: 0;
-    }
-
-    .info > .wrapper{
-        grid-template-areas: 
-        'students graduates'
-        'approval awards'
-        ;
-    }
-}
-@media only screen and (max-width: 600px){
-    .bannerText{
-        padding-top: 0;
-        width: 200px;
-    }
-    .heroBanner {
-        right: 0;
-    }
-}
-@media only screen and (max-width: 600px){
-    .heroBanner > img{
-        height: 301.67px;
-        width: 300px;
-    }
-}
-@media only screen and (max-width: 400px){
-    header{
-        height: 575px;
-    }
-    .heroBanner > img{
-        height: 201.67px;
-        width: 200px;
-    }
-}
-@media only screen and (max-width: 300px){
-    .landingPage{
-        padding-top: 100px;
-    }
-    .heroBanner{
-        margin-top: -30px;
-    }
-
-    .info > .wrapper{
-        width: 95%;
-    }
-}
-*/
