--- a/aboutus/about.css
+++ b/aboutus/about.css
@@ -6,7 +6,9 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-
+body {
+    overflow-x: hidden;
+}
 .teachers-container {
     width: 90%;
     margin: auto;
@@ -14,7 +16,6 @@
 }
 .head-teachers {
     text-align: center;
-    margin-bottom: 9em;
     color: #333333;
     font-size: 1em;
 }
@@ -27,7 +28,7 @@ h2 {
     /* height: 25em; */
     position: relative;
     padding: 2em;
-    background: #C1FFF2;
+    background: #BDF7FF;
     filter: drop-shadow(4px 6px 15px rgba(0, 0, 0, 0.35));
     transition: .3s ease-in-out;
 }
@@ -45,7 +46,7 @@ h2 {
 .teachers-text  h3{
     font-size: 1.8em;
     margin-bottom: 1.5em;
-    color: #026E64;
+    color: #284265;
     transition: .3s ease-in-out;
 }
 .teachers-text  p {
@@ -70,11 +71,12 @@ h2 {
 .fa-facebook:hover,
 .fa-twitter:hover {
     transition: .3s all;
-    color: #026E64;
+    color: #FC7900;
 }
 .teachers:hover {
-    background-color: #6500CA;
-    filter: drop-shadow(4px 6px 15px rgba(101, 0, 202, 0.47));
+    background-color: #284265;
+    filter: drop-shadow(4px 6px 15px rgba(40, 66, 101, 0.4));
+    transition: .3s all;
 }
 .teachers:hover h3{
     color: #ffffff;
@@ -87,6 +89,7 @@ h2 {
 }
 .teachers:hover .img-teachers img {
     transform: scale(1.1);
+    transition: .3s all;
 }
 .teachers-flex {
     justify-content: center;
@@ -98,9 +101,15 @@ h2 {
 .left-position{
     margin-top: 5em;
 }
+.main-teachers-flex {
+    display: flex;
+    flex-direction: column;
+    gap: 5em;
+}
 @media only screen and (min-width: 1067px) {
     .main-teachers-flex {
-        display: flex;
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     gap: 2em;
     max-width: 1220px;
@@ -113,7 +122,7 @@ h2 {
         margin-top: 0;
     }
     .main-teachers-flex {
-        height: 80em;
+        height: auto;
     }
 }
 
@@ -122,10 +131,11 @@ h2 {
 .about-banner {
     height: 20em;
     overflow: hidden;
+    position: relative;
 }
 h1 {
     font-size: 3em;
-    color: #6500CA;
+    color: #FC7900;
 }
 .about-banner img {
     width: 100%;
@@ -140,13 +150,13 @@ h1 {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 20em;
-    background: rgba(138, 248, 255, 0.71);
+    height: 100%;
+    background: rgba(40, 66, 101, 0.54);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .teachers-section {
     padding-top: 10em;
-    background-color: #ffffff;
+    background-color: #E3FFF9;
 }
