--- a/css/indexCSS/Nav & Hero.css
+++ b/css/indexCSS/Nav & Hero.css
@@ -19,7 +19,7 @@ body {
 }
 header{
     background-color: #BDF7FF;
-    height: 100vh;
+    height: 90vh;
     min-height: 500px;
     position: relative;
 }
@@ -197,6 +197,7 @@ header{
 .bannerText > h1{
     padding-bottom: 20px;
     font-size: 3em;
+    font-weight: 700;
     line-height: 133.52%;
     margin-bottom: .2em;
 }
@@ -217,7 +218,7 @@ header{
     color: white;
     border-radius: 10px;
     border: none;
-    box-shadow: 2px 6px 8px -2px rgba(101, 0, 202, 0.47);
+    box-shadow: 2px 6px 8px -2px rgba(250, 177, 21, 0.47);
     font-weight: 700;
     
 }
@@ -352,10 +353,14 @@ header{
     }
     .navMenu li a {
         font-size: 1em !important;
+        color: #284265 ;
+    }
+    .active-nav-a {
+        color: #ffffff !important;
     }
     .active-nav {
-        border-bottom: 3px solid #284265 !important;
-        
+        color: #FC7900 !important;
+        font-weight: 700;
     }
 
 }
