--- a/css/blogCSS/blog.css
+++ b/css/blogCSS/blog.css
@@ -13,8 +13,10 @@
 }
 h1 {
     font-size: 3em;
-    color: #6500CA;
+    color: #FC7900;
+    font-weight: 700;
 }
+
 .about-banner img {
     width: 100%;
     height: 50%;
@@ -29,12 +31,12 @@ h1 {
     top: 0;
     width: 100%;
     height: 20em;
-    background: rgba(138, 248, 255, 0.71);
+    background: rgba(40, 66, 101, 0.54);
     z-index: -1;
 }
 .teachers-section {
     padding-top: 10em;
-    background-color: #ffffff;
+    background-color: #E3FFF9;
 }
 .text {
     text-align: center;
@@ -49,7 +51,7 @@ h1 {
 }
 .text p {
     margin-top: 1em;
-    color: #000;
+    color: #ffffff;
     font-size: 1.2em;
     line-height: 166.02%;
 }
