--- a/css/login/login.css
+++ b/css/login/login.css
@@ -12,11 +12,18 @@
 .login_page{
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    max-width: 1520px;
+    margin: auto;
+    gap: 2em;
+    height: 80vh;
 }
 .login{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    max-width: 70em;
 }
 .login_text{
     display: flex;
@@ -24,6 +31,7 @@
     align-items: center;
     gap: 10px;
     padding-bottom: 30px;
+    width: 100%;
 }
 .login_text > p{
     width: 400px;
@@ -33,24 +41,21 @@
 .login_form, .forgot{
     color: #646464;
     text-decoration: none;
+    width: 100%;
+}
+.login_form {
+    margin-bottom: 2em;
 }
 .forgot:hover{
     text-decoration: underline;
 }
-input{
+.inputTag{
     border-radius: 10px;
     border: 1px solid #7B7B7B;
     background-color: transparent;
     padding: 0 10px;
-}
-#email{
-    width: 480px;
-    height: 40px;
-    margin-bottom: 10px;
-}
-#password{
-    width: 480px;
-    height: 40px;
+    width: 100%;
+    height: 4em;
     margin-bottom: 10px;
 }
 .hidden_pass, .hidden_email{
@@ -120,7 +125,7 @@ input{
     flex-direction: column;
 }
 
-button{
+#login_btn{
     height: 40px;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -130,6 +135,8 @@ button{
 #login_btn{
     color: white;
     background-color: #FC7900;
+    border: #FC7900;
+    height: 4em;
 }
 #google_icon{
     height: 30px;
@@ -139,7 +146,10 @@ button{
 }
 #google_btn{
     padding-left: 50px;
+    height: 4em;
     background-color: transparent;
+    border-radius: 10px;
+    border: 2px solid #646464;
 }
 
 .signup{
@@ -147,4 +157,19 @@ button{
 }
 .signup_link{
     color: #FC7900;
+}
+.img {
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+.img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+@media only screen and (min-width: 1160px)  {
+    .img {
+        display: block;
+    }
 }
