--- a/css/login/login.css
+++ b/css/login/login.css
@@ -168,6 +168,9 @@
     height: 100%;
     object-fit: contain;
 }
+.error {
+    color: red;
+}
 @media only screen and (min-width: 1160px)  {
     .img {
         display: block;
