--- a/css/blogCSS/blog.css
+++ b/css/blogCSS/blog.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
 
 *{
     margin: 0;
@@ -8,13 +7,13 @@
     font-family: 'Inter', sans-serif;
 }
 .about-banner {
-    height: 20em;
+    height: 30em;
     overflow: hidden;
 }
 h1 {
-    font-size: 3em;
+    font-size: 3em !important;
     color: #FC7900;
-    font-weight: 700;
+    font-weight: 700 !important;
 }
 
 .about-banner img {
@@ -30,7 +29,7 @@ h1 {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 20em;
+    height: 100%;
     background: rgba(40, 66, 101, 0.54);
     z-index: -1;
 }
@@ -57,11 +56,15 @@ h1 {
 }
 
 .section-main {
+    padding: 3em 0;
     background-color: #E3FFF9;
 }
 
 
 .blog-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
     width: 90%;
     margin: auto;
     max-width: 1520px;
